chamber/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@400;700&display=swap');


body {
  padding: 20px;
  font-family: 'Sofia Sans', sans-serif;
  max-width: 1600px;
  margin: auto;
  }
/* Header*/
header {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}
div#banner { 
  grid-column: 1/5;
  /*
  position: absolute; 
  top: 0; 
  left: 0; */
  text-align: center;
  font-size: 1.5em;
  background-color: #ffffff; 
  width: 100%; 
}
div#banner-content { 
  width: 100%; 
  margin: 0 auto; 
  padding: 10px; 
  border: 1px solid #000;
}

nav {
	margin: 0 auto;
  width: 100%;
	border-radius: 25px;
}
.navigation {
	list-style: none;
	margin: 0;
	padding: 0;
}
.navigation li:first-child {
	display: block;
}
.navigation li {
	display: none;
}
.navigation a {
	display: block;
	padding: 0.75rem;
	text-align: left;
	text-decoration: none;
	color: black;
	font-weight: 700;
	transition: 0.5s;
  font-size: 1.5em;
}
#menu::before {
	content: "≡";
	font-size: 2rem;
  justify-items: left;
} /**/
.navigation a:hover , .navigation a:active{
	color: #fff;
	background-color: #176087;
  border-radius: 25px;
}
.responsive li {
	display: block;
}
.responsive #menu::before {
	content: "X";
}
#logo_link img {
  width: 100%;
}
.social {
  display: flex;
  justify-content: center;
  
}
.social img {
  max-width: 50px;
  max-height: 50px;
}
.today {
  grid-column: 1/5;
  text-align: center;
  font-size: 1.5em;
  border-style: solid;
  border-color: #343a40;
  background-color: #D0D0D0;
  border-radius: 25px;
}
/*Menu End*/

/* Header End */

main section {
  margin: 10px;
  border-style: solid;
  border-width: 3px;
  border-color: #343a40;
  
}
h2 {
  color: #176087;
}

#hero {
  position: relative
}

#hero h1 {
  position: absolute;
  color: #D0D0D0;
  margin-top: 0.75rem;
  text-align: center;
  right: 1em;
  left: 1em;
  font-size: 2.5em;;

}

#hero img {
  width: 100%;
  height: 100%;
}

#hero-join {
  position: absolute;
  bottom: 20px;
  right: 50px;
  text-align: center;
  background-color: #4DA167;
  width: 200px;
  font-size: 1.5em;
  font-weight: 700;
  padding: 10px;
  border-radius: 5px;
  border: 3px solid #343a40;
}

#hero a {
  text-decoration: none;
  color: #343a40;
}

#event {
  padding: 20px;
}

#event h2{
  text-align: center;
}

#event p {
  text-align: center;
}

#spotlight {
  background-color: #D0D0D0;
}

#spotlight div {
  margin: 10px;
  padding: 10px;
  border-style: solid;
  border-width: 2px;
  background-color: #4DA167;
  text-align: center;
}

#spotthree {
  display: none;
}

#spotlight img {
  width:50%;
}

#news {
  padding: 10px;
}

#join {
  display: none;
  padding: 10px;
}

/* Footer */

footer {
  text-align: center;
  background-color: #176087;
  border-radius: 25px;
}
footer p {
  color: #ffffff;
}
footer a {
  text-decoration: none;
  color: #ffffff
}
span {
  font-weight: 400;
}
#date1 {
  color: white;
}
#message {
  color: white;
}
div p {
  margin: 10px;
}
#subBase {
  justify-items: start;
}
#subBase img {
  width: 100%;
  max-width: 250px;
  
}
#base p {
  margin: 2px;
}

